styles.css
/* Fonts */

@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,500;0,700;1,500&display=swap');

/* Site Wide Colour Options */
:root {
    --primary-color: #059669;
    --white-color: white;
    --ice-blue-color: #D6DFEB;
    --light-green-color: #DCEBE4;
    --cream-color: #FEF3C7;
    --emerald-green: #34D399;
    --dark-grey-color: #374151;
}


/* Site Wide Body Formatting */
body {
    font-family: 'Ubuntu',
        sans-serif;
    margin: 20px;

}


/* H headings formatting */

h1 {
    color: var(--emerald-green);
}

h2 {
    color: var(--primary-color);
}

.blog-title {
    font-size:1.7rem;
    font-weight:bold;
    margin-bottom:10px;
}


/* Section Break Formatting */

hr {
    margin-top: 2rem;
    margin-bottom: 2rem;
}


/* Container Formatting */
.containers {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
    padding-bottom: 1.5rem;
    max-width: 600px;
    margin: auto;
}

.containers-1000 {
    /* padding-left: 2.5rem; */
    /* padding-right: 2.5rem; */
    padding-bottom: 1.5rem;
    max-width: 1000px;
    margin: auto;
}


.fluid-containers {
    padding-left: 2rem;
    padding-right: 2rem;
}


/* Links-Button Formatting */
.link-primary-btn {
    text-decoration: none;
    display:inline-block;
    margin: 0.5rem 0.5rem;
    max-width: 10rem;
    text-align: center;
    background-color: var(--dark-grey-color);
    border: 2px solid var(--dark-grey-color);
    border-radius: 0.5rem;
    padding: 0.5rem 1.5rem;
    color: var(--white-color);
}

.link-primary-btn:hover {
    transition: 0.25s;
    background-color: var(--primary-color);
    border: 2px solid var(--primary-color);
}

.link-secondary-btn {
    text-decoration: none;
    display: inline-block;
    margin: 0.5rem 0.5rem;
    max-width: 10rem;
    color: var(--dark-grey-color);
    text-align: center;
    border: 2px solid var(--dark-grey-color);
    border-radius: 0.5rem;
    padding: 0.5rem 1.5rem;
}

.link-secondary-btn:hover {
    transition: 0.25s;
    background-color: var(--light-green-color);
    border: 2px solid var(--light-green-color);
}

.link-main-btn {
    transition: 0.1s;
    color: var(--dark-grey-color);
    display: block;
    text-align: center;
    text-decoration: none;
    border: 2px solid var(--dark-grey-color);
    border-radius: 0.25rem;
    padding: 0.5rem 1.5rem;
}

.link-main-btn:hover {
    transition: 0.1s;
    color: var(--white-color);
    background-color: var(--dark-grey-color);
}

.remove-hyperlink-formatting {
    text-decoration: none;
    color: var(--white-color);
    padding: 0.5rem 0.5rem;
}

.link-pad {
    padding-top: 2rem;
    padding-bottom: 2rem;
}


/* List Formatting */
.list-no-bullets {
    list-style: none;
}

.list-inline {
    display: inline;
    padding: 1rem 0.25rem;
}

.list-right-side {
    text-align: right;
}

.list-center-side {
    text-align: center;
    padding-inline-start: 0px;
}

.list-padding {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    line-height: 2.5vh;

}

.list-no-indent {
    list-style: none;
    padding-left: 0.5rem;
}


/* Navigation Bar Formatting */
.navigation {
    margin: -20px;
    background-color: var(--dark-grey-color);
    padding: 2rem 1.5rem;
    border-bottom-right-radius: 1rem;
}

.nav-brand {
    font-weight: bold;
    font-size: 1.5rem;
    color: var(--white-color);
}

.navigation .link {
    text-decoration: none;
    color: var(--white-color);
    padding: 0rem 0.35rem;
}

.navigation .link-active {
    font-weight: bolder;
    text-shadow: 1px 1px #999;
}

/* Header Formatting */
.hero {
    padding-top: 2rem;
    padding-bottom: 0rem;
}

.hero .hero-img {
    min-width: none;
    max-width: 100%;
    max-height: 100vh;
    display: block;
    margin: auto;
}

.hero .hero-caption {
    text-align: center;
    font-size: 2rem;
}

.hero .hero-caption-subpages {
    text-align: center;
    font-size: 3rem;
}

.hero-highlight {
    color: var(--primary-color);
}


/* Section Formatting */
section {
    margin: 2rem;
    padding: 0.5rem 1rem;
}

.section-break {
    padding-bottom: 20rem;
    margin-left: 5rem
}


/* Section Backgrounds */
.off-white-bg {
    background-color: var(--ice-blue-color);
    border-radius: 0.5rem;
    margin: 2rem auto;
}

.light-green-bg {
    background-color: var(--light-green-color);
    border-radius: 0.5rem;
    margin: 2rem auto;
}

.cream-bg {
    background-color: var(--cream-color);
    border-radius: 0.5rem;
    margin: 2rem auto;
}

@media screen and (max-width: 700px) {
    .about img {
        float: top;
        text-align: center;
        display: block;
        margin:auto;
    }
}

@media screen and (min-width: 700px) {
    .about img {
        float: right;
        margin: 20px;
    }
}

.about img {
    width: 300px;
}

.about p {
    font-size: 1.25rem;
    padding: 5px;
    line-height: 3.45vh;
}

p {
    line-height: 3vh;
}

.blog-preview {
    text-align: justify;
    line-height: 3vh;
}

/* Footer Formatting */
.footer-heading {
    margin-top: 20px;
    font-size: 1.1rem;
}

.work-title {
    margin-bottom:5px;
    padding-bottom: 0rem;
}

.duration {
    margin-top: 5px;
}


.footer-box {
    margin: -20px;
    margin-top: 2rem;
    background-color: var(--dark-grey-color);
    border-radius: 0.5rem 0rem 0.5rem 0rem;
    color: var(--white-color);
    padding: 0.5rem 1rem;
    text-align: center;
}

.footer-note {
    color: var(--ice-blue-color);
    text-align: center;
    font-size: smaller;
}

.social-icons {
    width: 30px;
}


 /* Animations */

.button-animation {
    transition: all 0.5s;
    cursor: pointer;
    margin: 5px;
}

.button-animation span {
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.4s;
}

.button-animation span:after {
    content: '\00bb';
    position: absolute;
    opacity: 0;
    top: 0;
    right: -20px;
    transition: 0.5s;
}

.button-animation:hover span {
    padding-right: 25px;
}

.button-animation:hover span:after {
    opacity: 1;
    right: 0;
}

.hvr-grow {
    display: inline-block;
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    transition-duration: 0.3s;
    transition-property: transform;
}

.hvr-grow:hover,
.hvr-grow:focus,
.hvr-grow:active {
    transform: scale(1.1);
}

.gradient-color-animation {
    background: linear-gradient(-45deg, var(--primary-color), var(--light-green-color), var(--dark-grey-color),var(--ice-blue-color));
    background-size: 400% 400%;
    animation: gradient 20s ease infinite;
}

@keyframes gradient {
    0% {
        background-position: 0% 50%;
    }

    50% {
        background-position: 100% 50%;
    }

    100% {
        background-position: 0% 50%;
    }
}

